--- a/client/views/game.ejs
+++ b/client/views/game.ejs
@@ -1,1 +1,14 @@
-Welcome to the game!
+Country Homepage
+<html>
+  <head>
+      <title>Your Country Homepage</title>
+  </head>
+
+  <body>
+    <h1><%=country.name%></h1>
+    <p>Pizzas: <%=country.resources.pizzas%></p>
+    <p>Ore: <%=country.resources.ore%></p>
+    <p>Energy: <%=country.resources.energy%></p>
+    <p>Water: <%=country.resources.water%></p>
+  </body>
+</html>
