--- a/client/views/decisions.ejs
+++ b/client/views/decisions.ejs
@@ -1,9 +1,11 @@
 <html>
   <head>
       <title>Decisions</title>
+      <link href="/stylesheet.css" rel="stylesheet"/>
   </head>
 
   <body>
+    <div class="content">
       <h1><%=dilemma.title%></h1>
       <p><%=dilemma.description%></p>
       <%dilemma.decisions.forEach(element=>{%>
@@ -15,6 +17,6 @@
         </form>
       <%});%>
 
-
+    </div>
   </body>
 </html>
