Table for Dilemmas

--- a/client/views/game.ejs
+++ b/client/views/game.ejs
@@ -13,5 +13,29 @@ Country Homepage
     <p>Ore: <%=country.resources.ore%></p>
     <p>Energy: <%=country.resources.energy%></p>
     <p>Water: <%=country.resources.water%></p>
+
+    <table>
+      <tr>
+        <th>dilemma</th>
+        <th>decision</th>
+      </tr>
+      <tr>
+        <td>x</td>
+        <td>y</td>
+      </tr>
+      <tr>
+        <td>x</td>
+        <td>y</td>
+      </tr>
+      <tr>
+        <td>x</td>
+        <td>y</td>
+      </tr>
+      <tr>
+        <td>x</td>
+        <td>y</td>
+      </tr>
+    
+    </table>
   </body>
 </html>
