--- a/client/views/navbar.ejs
+++ b/client/views/navbar.ejs
@@ -3,5 +3,6 @@
     <a href="/game/">Home</a> &diam;
     <a href="/dilemma">Decisions</a> &diam;
     <a href="https://for-the-love-of-martians.fandom.com/wiki/Timeline">Wiki!</a>
+    <a href="/about">How-to-play</a>
 
     </div>
